--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Bavol.GitHub.io</title>
+  <title>Bohuanglee.GitHub.io</title>
   <meta name="description" content="Have fun~">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,16 +22,16 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Bavol.GitHub.io</h1>
+      <h1 class="title">Bohuanglee.GitHub.io</h1>
     </header>
     <div id="container">
       <p class="tagline">Have fun~</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/bohuanglee/bavol.github.io/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/bohuanglee/bavol.github.io/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/bohuanglee/bavol.github.io" class="code">View Bavol.GitHub.io on GitHub</a>
+          <a href="https://github.com/bohuanglee/bohuanglee.github.io/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/bohuanglee/bohuanglee.github.io/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/bohuanglee/bohuanglee.github.io" class="code">View Bohuanglee.GitHub.io on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -49,7 +49,7 @@ And thank you to see this page. BEST BLESSING TO YOU!</p>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/bohuanglee" class="avatar"><img src="https://avatars2.githubusercontent.com/u/1725707?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/bohuanglee">bohuanglee</a> maintains <a href="https://github.com/bohuanglee/bavol.github.io">Bavol.GitHub.io</a></p>
+      <p><a href="https://github.com/bohuanglee" class="avatar"><img src="https://avatars2.githubusercontent.com/u/1725707?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/bohuanglee">bohuanglee</a> maintains <a href="https://github.com/bohuanglee/bohuanglee.github.io">Bohuanglee.GitHub.io</a></p>
 
 
       </div>
@@ -60,10 +60,10 @@ And thank you to see this page. BEST BLESSING TO YOU!</p>
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/bohuanglee/bavol.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/bohuanglee/bavol.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/bohuanglee/bohuanglee.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/bohuanglee/bohuanglee.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
-  
+
 </body>
 </html>
